Complete the officehour api
Complete the officehour api and classroom do not