@@ -6,6 +6,7 @@ import io.github.abdofficehour.appointmentsystem.pojo.data.ClassroomEvent;
 import io.github.abdofficehour.appointmentsystem.pojo.data.OfficeHourEvent;
 import io.github.abdofficehour.appointmentsystem.pojo.data.TeacherBanTime;
 import io.github.abdofficehour.appointmentsystem.pojo.data.TeacherTimeTable;
+import io.github.abdofficehour.appointmentsystem.pojo.enumclass.Aim;
 import io.github.abdofficehour.appointmentsystem.pojo.schema.classroomClassification.ClassroomClassificationSchema;
 import io.github.abdofficehour.appointmentsystem.pojo.schema.classroomClassification.ClassroomsInClassification;
 import io.github.abdofficehour.appointmentsystem.pojo.schema.teacherClassification.TeacherClassificationSchema;
@@ -13,13 +14,13 @@ import io.github.abdofficehour.appointmentsystem.pojo.schema.teacherClassificati
 import io.github.abdofficehour.appointmentsystem.pojo.schema.timeTable.*;
 import io.github.abdofficehour.appointmentsystem.pojo.schema.timeTable.Period;
 import io.github.abdofficehour.appointmentsystem.utils.TimeUtils;
-import org.apache.ibatis.type.NStringTypeHandler;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.*;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class TableInfoService {
@@ -125,10 +126,8 @@ public class TableInfoService {
      * @param teacherId 教师id
      */
     public OfficeHourTimetable getTeacherTimeTable(String teacherId){
-
         // 获取教师的名字
         String name = userInfoMapper.selectById(teacherId).getUsername();
-
         /*
          * 从数据库读取所选教师的时间表
          * 然后转化为officeHourTime字段
@@ -137,7 +136,8 @@ public class TableInfoService {
         LocalDate today = LocalDate.now();
         // 结束时间
         LocalDate todayAfterDayLen = LocalDate.now().plusDays(properties.getDateLen());
-        // 读取教师的时间表
+
+        //查找officeHourTime
         List<TeacherTimeTable> teacherTimeTables = teacherTimeTableMapper.selectTeacherTimeTable(teacherId,today,todayAfterDayLen);
         // 将TeacherTimeTable转换为OfficeHourTime
         List<SpecialTime> specialTimes =
@@ -149,29 +149,75 @@ public class TableInfoService {
                 ).toList();
 
         /*
-        转换timeTable的格式，用于表示教师的空闲和非空闲时间
-         */
-
-        // 读取教师的officehour
+        *查找officehourevent，筛选出空余和可用
+        *转换timeTable的格式，用于表示教师的空闲和非空闲时间
+        */
+        // 读取教师的officehourevent
         List<OfficeHourEvent> officeHourEvents = officeHourEventMapper.selectOfficeHourEventByTeacherIdAndForDayLen(teacherId, today, todayAfterDayLen);
+        // 获取配置文件中的工作时间
+        LocalTime defaultStartTime = LocalTime.of(properties.getStartHour(), properties.getStartMiu());
+        LocalTime defaultEndTime = LocalTime.of(properties.getEndHour(), properties.getEndMiu());
 
-        // 获取的最终timeTable格式
-        List<TimeTable> formatTimetable = formatTimetable(
-                today,
-                todayAfterDayLen,
-                officeHourEvents
-                        .stream()
-                        .map(officeHourEvent -> new TableEvent(
-                                officeHourEvent.getAppointmentDate(),
-                                officeHourEvent.getStartTime(),
-                                officeHourEvent.getEndTime(),
-                                officeHourEvent.getState()
-                        ))
-                        .toList()
-        );
+        // 按日期对 officeHourEvents 进行分组，然后构建每个日期的 TimeTable
+        Map<LocalDate, List<Period>> busyPeriodsByDate = officeHourEvents.stream()
+                .collect(Collectors.groupingBy(
+                        OfficeHourEvent::getAppointmentDate,
+                        Collectors.mapping(event -> new Period(
+                                event.getStartTime().atZone(ZoneOffset.UTC).toInstant().toEpochMilli(),
+                                event.getEndTime().atZone(ZoneOffset.UTC).toInstant().toEpochMilli()
+                        ), Collectors.toList())
+                ));
+        // 创建 TimeTable 列表
+        List<TimeTable> formatTimetable = new ArrayList<>();
+        // 遍历每一天，生成 TimeTable
+        for (LocalDate date = today; !date.isAfter(todayAfterDayLen); date = date.plusDays(1)) {
+            // 获取当天的繁忙时间段
+            List<Period> busyPeriods = busyPeriodsByDate.getOrDefault(date, new ArrayList<>());
 
+            // 计算当天的工作时间段
+            long startOfDayTimestamp = date.atTime(defaultStartTime).toInstant(ZoneOffset.UTC).toEpochMilli();
+            long endOfDayTimestamp = date.atTime(defaultEndTime).toInstant(ZoneOffset.UTC).toEpochMilli();
+            List<Period> availablePeriods = new ArrayList<>();
+            availablePeriods.add(new Period(startOfDayTimestamp, endOfDayTimestamp));
+
+            // 减去繁忙时间段，得到最终的 available 时间段
+            for (Period busy : busyPeriods) {
+                availablePeriods = subtractBusyTimeSegments(availablePeriods, busy);
+            }
+
+            // 创建 TimeTable 对象
+            TimeTable timeTable = new TimeTable();
+            timeTable.setDate(date.atStartOfDay(ZoneOffset.UTC).toInstant().toEpochMilli());
+            timeTable.setBusy(busyPeriods);
+            timeTable.setAvailable(availablePeriods);
+
+            // 添加到格式化的时间表列表中
+            formatTimetable.add(timeTable);
+        }
         return new OfficeHourTimetable(name, specialTimes,formatTimetable);
     }
+
+    private List<Period> subtractBusyTimeSegments(List<Period> availablePeriods, Period busy) {
+        List<Period> result = new ArrayList<>();
+
+        for (Period available : availablePeriods) {
+            // 如果 busy 不在 available 范围内
+            if (available.getEnd() <= busy.getStart() || available.getStart() >= busy.getEnd()) {
+                result.add(available);
+            } else {
+                // 部分重叠情况：分割 available
+                if (available.getStart() < busy.getStart()) {
+                    result.add(new Period(available.getStart(), busy.getStart()));
+                }
+                if (available.getEnd() > busy.getEnd()) {
+                    result.add(new Period(busy.getEnd(), available.getEnd()));
+                }
+            }
+        }
+
+        return result;
+    }
+
 
     /**
      * 获取classroom时间表
@@ -180,11 +226,12 @@ public class TableInfoService {
      */
     public ClassroomTimeTable getClassroomTimeTable(int classroomId){
 
+        //拿取教室名
         String name = classroomMapper.selectById(classroomId).getClassroomName();
 
         /*
-         * 从数据库读取所选教师的时间表
-         * 然后转化为officeHourTime字段
+         * 从数据库读取所选教室的时间表
+         *
          */
         // 开始时间
         LocalDate today = LocalDate.now();
@@ -201,26 +248,61 @@ public class TableInfoService {
                                 timeUtils.toTimeStamp(classroomTimeTable.getEndTime()))
                 ).toList();
 
-        // 转换timetable格式
-        List<ClassroomEvent> classroomEvents = classroomEventMapper.selectByIdAndTime(classroomId,today,todayAfterDayLen);
+        // 获取配置文件中的默认工作时间
+        LocalTime defaultStartTime = LocalTime.of(properties.getStartHour(), properties.getStartMiu());
+        LocalTime defaultEndTime = LocalTime.of(properties.getEndHour(), properties.getEndMiu());
+        // 读取 ClassroomEvent 数据，获取指定日期范围内的事件
+        List<ClassroomEvent> classroomEvents = classroomEventMapper.selectByIdAndTime(classroomId, today, todayAfterDayLen);
+        // 将 classroomEvents 转换为 List<TableEvent>，表示 busy 时间段
+        List<TableEvent> busyEvents = classroomEvents
+                .stream()
+                .map(classroomEvent -> new TableEvent(
+                        classroomEvent.getAppointmentDate(),
+                        classroomEvent.getStartTime(),
+                        classroomEvent.getEndTime(),
+                        classroomEvent.getState()
+                ))
+                .toList();
 
-        // 转化
-        List<TimeTable> formatTimetable = formatTimetable(
-                today,
-                todayAfterDayLen,
-                classroomEvents
-                        .stream()
-                        .map(classroomEvent -> new TableEvent(
-                                classroomEvent.getAppointmentDate(),
-                                classroomEvent.getStartTime(),
-                                classroomEvent.getEndTime(),
-                                classroomEvent.getState()
-                        ))
-                        .toList()
-        );
+        // 创建 TimeTable 列表
+        List<TimeTable> formatTimetable = new ArrayList<>();
 
+        // 遍历指定日期范围，生成每一天的 TimeTable
+        for (LocalDate date = today; !date.isAfter(todayAfterDayLen); date = date.plusDays(1)) {
+            // 获取当天的繁忙时间段（busy）
+            LocalDate finalDate = date;
+            List<Period> busyPeriods = busyEvents.stream()
+                    .filter(event -> event.getAppointmentDate().equals(finalDate))
+                    .map(event -> new Period(
+                            event.getStartTime().atZone(ZoneOffset.UTC).toInstant().toEpochMilli(),
+                            event.getEndTime().atZone(ZoneOffset.UTC).toInstant().toEpochMilli()
+                    ))
+                    .toList();
 
-        return new ClassroomTimeTable(name,specialTimes,formatTimetable);
+            // 初始化当天的可用时间段（available），为整天的工作时间段
+            long startOfDayTimestamp = date.atTime(defaultStartTime).toInstant(ZoneOffset.UTC).toEpochMilli();
+            long endOfDayTimestamp = date.atTime(defaultEndTime).toInstant(ZoneOffset.UTC).toEpochMilli();
+            List<Period> availablePeriods = new ArrayList<>();
+            availablePeriods.add(new Period(startOfDayTimestamp, endOfDayTimestamp));
+
+            // 从 available 时间段中减去 busy 时间段，得到最终的 available 时间段
+            for (Period busy : busyPeriods) {
+                availablePeriods = subtractBusyTimeSegments(availablePeriods, busy);
+            }
+
+            // 创建 TimeTable 对象
+            TimeTable timeTable = new TimeTable();
+            timeTable.setDate(date.atStartOfDay(ZoneOffset.UTC).toInstant().toEpochMilli()); // 日期时间戳
+            timeTable.setBusy(busyPeriods);  // 设置当天的繁忙时间段
+            timeTable.setAvailable(availablePeriods);  // 设置当天的可用时间段
+
+            // 添加到时间表列表中
+            formatTimetable.add(timeTable);
+        }
+
+// 返回包含教室时间表的对象
+        return new ClassroomTimeTable(name, specialTimes, formatTimetable);
+
     }
 
     /**
@@ -321,29 +403,131 @@ public class TableInfoService {
     /**
      * 用于教师禁用时间段------------from：ymz方便修改
      */
-    public void banTeacher(String teacherId, TeacherBanTime banRequest){
-        // 获取教师的名字
-        String name = userInfoMapper.selectById(teacherId).getUsername();
+    public List<Map<String, Object>> banTeacher(String teacherId, LocalDateTime startDate, LocalDateTime endDate, LocalDateTime startTime, LocalDateTime endTime) {
 
-        OfficeHourEvent banTime = new OfficeHourEvent();
-        banTime.setTeacher(name);
-        banTime.setState(0);
-        LocalDateTime startDate = LocalDateTime.ofInstant(Instant.ofEpochSecond(banRequest.getStartDate()), ZoneId.systemDefault());
-        LocalDateTime endDate = LocalDateTime.ofInstant(Instant.ofEpochSecond(banRequest.getEndDate()), ZoneId.systemDefault());
-        LocalDateTime startTime = LocalDateTime.ofInstant(Instant.ofEpochSecond(banRequest.getStartTime()), ZoneId.systemDefault());
-        LocalDateTime endTime = LocalDateTime.ofInstant(Instant.ofEpochSecond(banRequest.getEndTime()), ZoneId.systemDefault());
-        LocalDateTime modifiedStart = startTime.withYear(startDate.getYear())
-                .withMonth(startDate.getMonthValue())
-                .withDayOfMonth(startDate.getDayOfMonth());
-        LocalDateTime modifiedEnd = endTime.withYear(endDate.getYear())
-                .withMonth(endDate.getMonthValue())
-                .withDayOfMonth(endDate.getDayOfMonth());
-        banTime.setStartTime(modifiedStart);
-        banTime.setEndTime(modifiedEnd);
-        long daysBetween = ChronoUnit.DAYS.between(startDate, endDate);
+        LocalDate today = LocalDate.now();
+        if (startDate.isBefore(today.atStartOfDay())) {
+            List<Map<String, Object>> result = new ArrayList<>();
+            Map<String, Object> conflict = new HashMap<>();
+            conflict.put("start_date", today.atStartOfDay().toInstant(ZoneOffset.UTC).toEpochMilli());
+            result.add(conflict);
+            return result;
+        }
+
+        long daysBetween = ChronoUnit.DAYS.between(startDate.toLocalDate(), endDate.toLocalDate());
+        List<OfficeHourEvent> officeHourEvents = new ArrayList<>();
+
+        // 查询每一天是否存在冲突
         for (int i = 0; i <= daysBetween; i++) {
-            //利用for循环添加禁用天数
-            officeHourEventMapper.insertOfficeHourEvent(banTime);
+            LocalDate tempDate = startDate.toLocalDate().plusDays(i);
+            List<OfficeHourEvent> newOfficeHourEvents = officeHourEventMapper.selectOfficeHourEventByTeacherIdAndDate(teacherId, tempDate);
+            officeHourEvents.addAll(newOfficeHourEvents);
+        }
+
+        // 如果没有冲突的事件
+        if (officeHourEvents.isEmpty()) {
+            for (int i = 0; i <= daysBetween; i++) {
+                LocalDate tempDate = startDate.toLocalDate().plusDays(i);
+                LocalDateTime modifiedStart = startTime.withYear(tempDate.getYear())
+                        .withMonth(tempDate.getMonthValue())
+                        .withDayOfMonth(tempDate.getDayOfMonth());
+                LocalDateTime modifiedEnd = endTime.withYear(tempDate.getYear())
+                        .withMonth(tempDate.getMonthValue())
+                        .withDayOfMonth(tempDate.getDayOfMonth());
+
+                // 创建新的 OfficeHourEvent 实例，避免重复使用同一实例
+                OfficeHourEvent banTime = new OfficeHourEvent();
+                banTime.setTeacher(teacherId);
+                banTime.setStudent("banner");
+                banTime.setState(0);
+                banTime.setStartTime(modifiedStart);
+                banTime.setEndTime(modifiedEnd);
+                banTime.setAppointmentDate(tempDate);
+
+                // 插入禁用事件
+                officeHourEventMapper.insertOfficeHourEvent(banTime);
+            }
+            return null;
+        } else {
+            // 如果有冲突，将冲突的日期、开始时间和结束时间记录
+            List<Map<String, Object>> conflictPeriods = new ArrayList<>();
+            for (OfficeHourEvent event : officeHourEvents) {
+                Map<String, Object> conflict = new HashMap<>();
+                conflict.put("date", event.getAppointmentDate().atStartOfDay(ZoneOffset.systemDefault()).toInstant().toEpochMilli());
+                conflict.put("startTime", event.getStartTime().atZone(ZoneOffset.systemDefault()).toInstant().toEpochMilli());
+                conflict.put("endTime", event.getEndTime().atZone(ZoneOffset.systemDefault()).toInstant().toEpochMilli());
+                conflictPeriods.add(conflict);
+            }
+            return conflictPeriods;
+        }
+    }
+
+
+    /**
+     * 用于教室禁用时间段------------from：ymz方便修改
+     */
+    public List<Map<String, Object>> banClassroom(int classroomId, LocalDateTime startDate, LocalDateTime endDate, LocalDateTime startTime, LocalDateTime endTime, String userId) {
+
+        LocalDate today = LocalDate.now();
+        if (startDate.isBefore(today.atStartOfDay())) {
+            List<Map<String, Object>> result = new ArrayList<>();
+            Map<String, Object> conflict = new HashMap<>();
+            conflict.put("start_date", today.atStartOfDay().toInstant(ZoneOffset.UTC).toEpochMilli());
+            result.add(conflict);
+            return result;
+        }
+
+        long daysBetween = ChronoUnit.DAYS.between(startDate.toLocalDate(), endDate.toLocalDate());
+        List<ClassroomEvent> classroomEvents = new ArrayList<>();
+
+        // 查询每一天是否存在冲突
+        for (int i = 0; i <= daysBetween; i++) {
+            LocalDate tempDate = startDate.toLocalDate().plusDays(i);
+            List<ClassroomEvent> newClassroomEvents = classroomEventMapper.selectClassroomEventByTeacherIdAndDate(classroomId, tempDate);
+            classroomEvents.addAll(newClassroomEvents);
+        }
+
+        // 如果没有冲突的事件
+        if (classroomEvents.isEmpty()) {
+            for (int i = 0; i <= daysBetween; i++) {
+                LocalDate tempDate = startDate.toLocalDate().plusDays(i);
+                LocalDateTime modifiedStart = startTime.withYear(tempDate.getYear())
+                        .withMonth(tempDate.getMonthValue())
+                        .withDayOfMonth(tempDate.getDayOfMonth());
+                LocalDateTime modifiedEnd = endTime.withYear(tempDate.getYear())
+                        .withMonth(tempDate.getMonthValue())
+                        .withDayOfMonth(tempDate.getDayOfMonth());
+
+                // 创建新的 OfficeHourEvent 实例，避免重复使用同一实例
+                ClassroomEvent banTime = new ClassroomEvent();
+
+                banTime.setClassroom(classroomId);
+                banTime.setApplicant(userId);
+                banTime.setApprove("banner");
+                banTime.setAim(Aim.BANNING);
+                banTime.setIsComputer(false);
+                banTime.setIsMedia(false);
+                banTime.setIsSound(false);
+                banTime.setState(0);
+                banTime.setStartTime(modifiedStart);
+                banTime.setEndTime(modifiedEnd);
+                banTime.setAppointmentDate(tempDate);
+
+                // 插入禁用事件
+                classroomEventMapper.insertClassroomEvent(banTime);
+            }
+            return null;
+        } else {
+            // 如果有冲突，将冲突的日期、开始时间和结束时间记录
+            List<Map<String, Object>> conflictPeriods = new ArrayList<>();
+            for (ClassroomEvent event : classroomEvents) {
+                Map<String, Object> conflict = new HashMap<>();
+                conflict.put("date", event.getAppointmentDate().atStartOfDay(ZoneOffset.systemDefault()).toInstant().toEpochMilli());
+                conflict.put("startTime", event.getStartTime().atZone(ZoneOffset.systemDefault()).toInstant().toEpochMilli());
+                conflict.put("endTime", event.getEndTime().atZone(ZoneOffset.systemDefault()).toInstant().toEpochMilli());
+                conflictPeriods.add(conflict);
+            }
+            return conflictPeriods;
         }
     }
 }
